syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.grpc";

message InvoiceRequest {

  string content = 1;

}

message InvoiceResponse {

  string response = 1;

}

service InvoiceService {

  rpc invoice (InvoiceRequest) returns (InvoiceResponse);

}
